basic gameplay mostly done

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 </div>
 
 <div id = 'start'>
+	Start
 </div>
 
-<input type = "text" id = 'search'>
+<input type = "text" id = 'guess'>
 </div>
 
 <input type = "submit" id = 'submit'>
 </div>
 
+<div id = 'usedLetters'>
+</div>
 
 <script type="text/javascript", src = 'index.js'></script>
 </body>
