--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 
+<div id = 'header'>
+</div>
+
 <div id = 'box1'> 
 </div>
 
@@ -20,6 +23,9 @@
 </div>
 
 <div id = 'usedLetters'>
+</div>
+
+<div id = 'hintbox'>
 </div>
 
 <script type="text/javascript", src = 'index.js'></script>
