--- a/index.html
+++ b/index.html
@@ -2,30 +2,56 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/main.css">
-	<title>Wheel of Fortune</title>
+	<title>Wheel of Functions</title>
 </head>
 <body>
 
-<div id = 'header'>
+<div id = wrapper>
+
+
+<div id = 'bigbox'>
+	<div id = 'title'>
+	WHEEL OF FUNCTIONS
+	</div>	
+	<div id = 'header'>
+	Let's Play! Click the Wheel to Start
+	</div>
+	<div id = 'box1'> 
+	</div>
+
+
+	<div id = hintTitle>
+	Hint:
+	</div>
+	<div id = 'hintbox'>
+	</div>
+
 </div>
 
-<div id = 'box1'> 
+<div id = guessTitle>
+Type a Letter Below:
+</div>
+<input type = 'text' id = 'guess'>
+
 </div>
 
-<div id = 'start'>
-	Start
+<button id = 'submit'>
+	Click to Submit a Letter
+</button>
 </div>
 
-<input type = "text" id = 'guess'>
 </div>
 
-<input type = "submit" id = 'submit'>
+<div id = letterTitle>
+	Incorrect Letters:
 </div>
-
 <div id = 'usedLetters'>
 </div>
 
-<div id = 'hintbox'>
+<div id = 'wheel'>
+</div>
+
+
 </div>
 
 <script type="text/javascript", src = 'index.js'></script>
